[package]
name = "rust-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thruster = "1.1.10"
tokio = { version = "1.6.1", features = ["full"] }
log = "0.4"
env_logger = "0.7.1"
futures = "0.3"
